<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/menu_telegram"
    android:icon="@drawable/ic_drawer_telegram"
    android:title="@string/menu_telegram"/>
    <item
        android:id="@+id/menu_rate"
        android:icon="@drawable/ic_baseline_star_rate_24"
        android:title="@string/menu_rate"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/menu_share"/>
    <item
        android:id="@+id/menu_aboutUs"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/menu_aboutUs"/>
    <item
        android:id="@+id/menu_exit"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/menu_exit"/>
</menu>